style: improve code readability
Changed Share to a record class, fixed minor spelling misstakes, simplified some code and other misc style improvements.